# demo-grpc

./: BUILD.bazel  Makefile  WORKSPACE.bazel  deps.bzl  go.mod  go.sum  main.go  main_test.go
app/: BUILD.bazel  app.go
controller/: BUILD.bazel  module.go
controller/book/: BUILD.bazel  book.go
controller/user/: BUILD.bazel  user.go
entity/: BUILD.bazel  book.go  user.go
handler/: BUILD.bazel  bookhandler.go  module.go  userhandler.go
handler/book/: BUILD.bazel  bookhandler.go
handler/user/: BUILD.bazel  userhandler.go
loggerfx/: BUILD.bazel  loggerfx.go
mapper/: BUILD.bazel  book.go  user.go
model/: BUILD.bazel  model.go
proto/: BUILD.bazel  book.pb.go  book.proto  book_grpc.pb.go  user.pb.go  user.proto  user_grpc.pb.go
repository/: BUILD.bazel  module.go
repository/inmemory/: BUILD.bazel  inmemory.go
