load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "handler",
    srcs = ["module.go"],
    importpath = "github.com/shivaak/demo-grpc/handler",
    visibility = ["//visibility:public"],
    deps = [
        "//handler/book",
        "//handler/user",
        "@org_uber_go_fx//:fx",
    ],
)
