load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mapper",
    srcs = [
        "book.go",
        "user.go",
    ],
    importpath = "github.com/shivaak/demo-grpc/mapper",
    visibility = ["//visibility:public"],
    deps = [
        "//entity",
        "//model",
        "//proto",
    ],
)
