load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "gen_proto",
    srcs = [
        "book.proto",
        "user.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "gen_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/shivaak/demo-grpc/proto/gen",
    proto = ":gen_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "gen",
    embed = [":gen_go_proto"],
    importpath = "github.com/shivaak/demo-grpc/proto/gen",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "proto_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/shivaak/demo-grpc/proto",
    proto = ":gen_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":proto_go_proto"],
    importpath = "github.com/shivaak/demo-grpc/proto",
    visibility = ["//visibility:public"],
)
