load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "repository",
    srcs = ["module.go"],
    importpath = "github.com/shivaak/demo-grpc/repository",
    visibility = ["//visibility:public"],
    deps = [
        "//repository/inmemory",
        "@org_uber_go_fx//:fx",
    ],
)
