load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "book",
    srcs = ["book.go"],
    importpath = "github.com/shivaak/demo-grpc/controller/book",
    visibility = ["//visibility:public"],
    deps = [
        "//entity",
        "//mapper",
        "//proto",
        "//repository/inmemory",
        "@com_github_google_uuid//:uuid",
    ],
)
