load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "book",
    srcs = ["bookhandler.go"],
    importpath = "github.com/shivaak/demo-grpc/handler/book",
    visibility = ["//visibility:public"],
    deps = [
        "//controller/book",
        "//mapper",
        "//proto",
    ],
)

go_test(
    name = "book_test",
    srcs = ["bookhandler_test.go"],
    embed = [":book"],
)
