load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "user",
    srcs = ["userhandler.go"],
    importpath = "github.com/shivaak/demo-grpc/handler/user",
    visibility = ["//visibility:public"],
    deps = [
        "//controller/user",
        "//mapper",
        "//proto",
    ],
)
