load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "inmemory",
    srcs = ["inmemory.go"],
    importpath = "github.com/shivaak/demo-grpc/repository/inmemory",
    visibility = ["//visibility:public"],
    deps = [
        "//entity",
        "//mapper",
        "//model",
        "@com_github_google_uuid//:uuid",
        "@org_uber_go_zap//:zap",
    ],
)
